--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,6 @@ libz/configure.log
 !macosx/Makefile
 !mswin32/Makefile
 !zenmap/share/zenmap/locale/Makefile
+benchmarks/checksum_bench
+zig/.zig-cache/
+zig/checksum.o
