--- a/Makefile.in
+++ b/Makefile.in
@@ -115,7 +115,7 @@ export HDRS = charpool.h FingerPrintResults.h FPEngine.h idle_scan.h MACLookup.h
 OBJS = charpool.o FingerPrintResults.o FPEngine.o FPModel.o idle_scan.o MACLookup.o nmap_dns.o nmap_error.o nmap.o nmap_ftp.o NmapOps.o NmapOutputTable.o nmap_tty.o osscan2.o osscan.o output.o payload.o portlist.o portreasons.o protocols.o scan_engine.o scan_engine_connect.o scan_engine_raw.o scan_lists.o service_scan.o services.o string_pool.o NewTargets.o TargetGroup.o Target.o targets.o tcpip.o timing.o traceroute.o utils.o xml.o $(NSE_OBJS)
 
 # Zig-optimized object files (override C implementations at link time)
-ZIG_OBJS = zig/checksum.o zig/probe_filter.o
+ZIG_OBJS = zig/checksum.o zig/probe_filter.o zig/arena.o zig/portstate.o
 
 # %.o : %.cc -- nope this is a GNU extension
 .cc.o:
@@ -132,6 +132,12 @@ zig/checksum.o: zig/checksum.zig
 
 zig/probe_filter.o: zig/probe_filter.zig
 	zig build-obj -OReleaseFast -lc $< --name probe_filter 2>&1 && mv probe_filter.o $@
+
+zig/arena.o: zig/arena.zig
+	zig build-obj -OReleaseFast -lc $< --name arena 2>&1 && mv arena.o $@
+
+zig/portstate.o: zig/portstate.zig
+	zig build-obj -OReleaseFast -lc $< --name portstate 2>&1 && mv portstate.o $@
 
 all: $(TARGET) $(BUILDZENMAP) $(BUILDNDIFF) $(BUILDNPING) $(BUILDNCAT)
 
